# dronetool

./: .gitignore  CMakeLists.txt
include/: Distribution.h  Drone.h  DroneLink.h  KalmanFilter.h  Packet.h  Simulation.h  SlidingBuffer.h
include/drones/: SimpleDrone.h
include/modules/: Battery.h  Module.h  Rotor.h
src/: Distribution.cpp  Packet.cpp  Simulation.cpp  main.cpp
src/drones/: SimpleDrone.cpp
src/modules/: Battery.cpp  Rotor.cpp
